<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeRegister"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="0dp"
    android:theme="@style/MyAppTheme"
    app:elevation="0dp"
    tools:context=".DonorRegistration">

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif-condensed"
        android:padding="5dp"
        android:text="@string/app_name"
        android:textColor="@color/white_color"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tvRegText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvAppName"
        android:layout_margin="0dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/registration"
        android:textAllCaps="true"
        android:textColor="@color/white_color"
        android:textSize="25sp" />

    <ScrollView
        android:id="@+id/scrollReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvRegText"
        android:padding="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/TextInputLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp">

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName|textCapSentences"
                    android:maxLength="30"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="#ff0000"
                    android:textCursorDrawable="@null" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/TextInputLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp">

                <EditText
                    android:id="@+id/et_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_contact_number"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="#ff0000" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/TextInputLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp">

                <EditText
                    android:id="@+id/et_aadhaar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_aadhaar_number"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="12"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="#ff0000"
                    android:textCursorDrawable="@null" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/TextInputLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_email_id"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="#ff0000"
                    android:textCursorDrawable="@null" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/select_gender"
                android:textColor="@color/colorAccent" />

            <RadioGroup
                android:id="@+id/RadioGeoupGender"
                android:layout_width="match_parent"
                android:padding="4dp"
                android:orientation="horizontal"
                android:layout_height="wrap_content">


                <RadioButton
                    android:id="@+id/rbMale"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/male"
                    android:textColor="@color/colorAccent" />

                <RadioButton
                    android:id="@+id/rbFemale"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"

                    android:checked="false"
                    android:text="@string/gender_female"
                    android:textColor="@color/colorAccent" />

                <RadioButton
                    android:id="@+id/rbOther"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:shadowColor="@color/colorAccent"
                    android:text="@string/gender_other"
                    android:textColor="@color/colorAccent" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="8dp"
                    android:text="@string/blood_group"
                    android:textColor="@color/colorAccent" />

                <Spinner
                    android:id="@+id/spinnerBloodGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:textAlignment="center"
                    android:tooltipText="Select Blood Group" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:textColor="@color/colorAccent"
                    android:hint="@string/click_to_select_date_of_birth"
                    android:textColorHint="@color/colorAccent" />

                <TextView
                    android:id="@+id/tvDOBdata"
                    android:padding="2dp"
                    android:textSize="15sp"
                    android:textColor="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dd_mm_yyy" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scrollReg"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent"
        android:text="@string/register"
        android:textColor="@color/white_color" />

</RelativeLayout>