<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/rvBloodReceiver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/MyAppTheme"
        tools:context=".BloodReceiver">

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimary"
            android:fontFamily="sans-serif-condensed"
            android:padding="5dp"
            android:text="@string/app_name"
            android:textColor="@color/white_color"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tvRegText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvAppName"
            android:layout_margin="0dp"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/blood_receiver"
            android:textAllCaps="true"
            android:textColor="@color/white_color"
            android:textSize="22sp" />

        <LinearLayout
            android:id="@+id/llReceiver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/tvRegText"
            android:padding="8dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/TextInputLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp">

                <EditText
                    android:id="@+id/etNameReceiver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_receiver_name"
                    android:inputType="textPersonName|textCapSentences"
                    android:maxLength="30"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="#ff0000"
                    android:textCursorDrawable="@null" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/TextInputLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp">

                <EditText
                    android:id="@+id/et_mobileReceiver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_contact_number"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="#ff0000" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/TextInputLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp">

                <EditText
                    android:id="@+id/et_emailReceiver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_email_id"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="#ff0000" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/TextInputLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp">

                <EditText
                    android:id="@+id/et_Bimari"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/purpose_behind_blood_need"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences|textAutoCorrect"
                    android:maxLength="50"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="#ff0000"
                    android:textCursorDrawable="@null" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/TextInputLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp">

                <EditText
                    android:id="@+id/et_CustomMsg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/any_message_to_donor"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences|textAutoCorrect"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="#ff0000"
                    android:textCursorDrawable="@null" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="8dp"
                    android:text="@string/blood_group"
                    android:textColor="@color/colorAccent" />

                <Spinner
                    android:id="@+id/spinnerBloodGroupReceiver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:textAlignment="center" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnGiveBlood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/llReceiver"
            android:layout_centerHorizontal="true"
            android:layout_margin="4dp"
            android:background="@color/colorAccent"
            android:text="DONATE NOW"
            android:textColor="@color/white_color" />
    </RelativeLayout>
</ScrollView>
